# dht22-embedded-hal

./: README.md
dht22/: Cargo.toml
dht22/src/: dht22.rs  error.rs  lib.rs
